# vm4kFoam

./: CMakeLists.txt
examples/HuAngeli/c01/0/: T.cont  T.disp  U.cont  U.disp  alpha.cont  alpha.disp  epsilon.cont  epsilon.disp  k.cont  k.disp  p
examples/HuAngeli/c01/constant/: phaseProperties  thermophysicalProperties.cont  thermophysicalProperties.disp  turbulenceProperties.cont  turbulenceProperties.disp  vm4kModelProperties
examples/HuAngeli/c01/constant/polyMesh/: blockMeshDict
examples/HuAngeli/c01/system/: controlDict  decomposeParDict  fvSchemes  fvSolution
examples/HuAngeli/digitilized-plots/: U-water-cont-alpha-0.8-exp.csv  U-water-disp-alpha-0.8-exp.csv  alpha-exp-30.csv  alpha-exp-40.csv  alpha-exp.csv
solvers/vm4kFoam/: CMakeLists.txt  UEqns.H  createFields.H  vm4kFoam.C
src/kineticModel/: CMakeLists.txt  vm4kModel.C  vm4kModel.H
